[gd_scene load_steps=5 format=3 uid="uid://denebhmiatmje"]

[ext_resource type="Script" uid="uid://bxbdhcilr0dxp" path="res://scripts/enemy.gd" id="1_7p1mj"]
[ext_resource type="Texture2D" uid="uid://dq3h7osm6ogro" path="res://icon.svg" id="2_md0e3"]
[ext_resource type="PackedScene" uid="uid://d1frdtulkra67" path="res://scenes/wskazowki.tscn" id="3_orwns"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7p1mj"]
resource_local_to_scene = true
size = Vector2(255.75, 256.125)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_7p1mj")
max_time = 180
current_time = 180

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture_repeat = 2
position = Vector2(-2.3841858e-07, -2.9802322e-08)
texture = ExtResource("2_md0e3")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.125, -0.0625)
shape = SubResource("RectangleShape2D_7p1mj")

[node name="Wskazowki" parent="." instance=ExtResource("3_orwns")]
position = Vector2(0, -78)

[connection signal="mouse_entered" from="Hitbox" to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_mouse_exit"]
